--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,26 @@ build/
 ### VS Code ###
 .vscode/
 
-
-.classpath
 /src/main/resources/sqlite3.db
 **/logs
+**/dist
+**/.DS_Store
+**/node_modules
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
