--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-
+        <!--swagger 接口文档-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
 
         <!--代码生成相关依赖-->
         <dependency>
