--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,19 @@
             <version>1.16.16</version>
         </dependency>
 
+
+        <!--ibatis 代码生成测试-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.ibatis</groupId>-->
+            <!--<artifactId>ibator</artifactId>-->
+            <!--<version>1.5.0-1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.ibatis</groupId>-->
+            <!--<artifactId>ibatis-sqlmap</artifactId>-->
+            <!--<version>2.3.4.726</version>-->
+        <!--</dependency>-->
+
     </dependencies>
 
     <build>
